--- a/src/components/body.css
+++ b/src/components/body.css
@@ -28,6 +28,7 @@
     z-index: 100;
     transition: top 0.3s ease;
     background-color: white;
+    width: 100%
 }
 
 /* Menu fixo após scroll */
@@ -67,8 +68,9 @@
 
 /* Seções da página */
 .section {
-    height: 100vh;
+    padding: 30px 5px 30px 5px;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     border-bottom: 1px solid #ddd;
