--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -8,9 +8,21 @@
     padding: 10px 10px 10px 10px
 }
 
+.footer a{
+    color: white;
+    text-decoration: underline;
+    transition: all 0.3s ease;
+}
+
+.footer a:hover{
+    color: greenyellow;
+    transition: all 0.3s ease;
+}
+
 .footer-sec{
     display: flex;
     flex-direction: column;
+
     align-content: center;
     align-items: center;
 }
