--- a/src/components/header.css
+++ b/src/components/header.css
@@ -33,9 +33,21 @@
     background-position: center;
     background-size: cover;
     margin: 0;
+    align-content: center;
+    font-size: 100px;
+    color: white;
+    text-shadow: 0 0 20px black;
+    text-decoration-color: var(--primary-color);
+    text-decoration-line: underline;
+    filter: saturate(1.3);
 }
 
+
+
 @media only screen and (max-width: 768px){
+    .header-image{
+        font-size: 60px;
+    }
     .dropdownLanguages{
         top: 22px;
     }
