--- a/landit-next/components/layouts/footer.module.css
+++ b/landit-next/components/layouts/footer.module.css
@@ -1,4 +1,4 @@
-.footer{
+.footer {
     height: 300px;
     background-color: rgba(77, 141, 40, 0.56);
     display: flex;
@@ -8,30 +8,29 @@
     padding: 10px 10px 10px 10px
 }
 
-.footer a{
+.footer a {
     color: white;
     text-decoration: underline;
     transition: all 0.3s ease;
 }
 
-.footer a:hover{
+.footer a:hover {
     color: greenyellow;
     transition: all 0.3s ease;
 }
 
-.footer-sec{
+.footerSec {
     display: flex;
     flex-direction: column;
-
     align-content: center;
     align-items: center;
 }
 
-.logo{
+.logo {
     height: 100px
 }
 
-.logos-row{
+.logosRow {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -39,8 +38,8 @@
 }
 
 @media (max-width: 768px) {
-    .footer{
+    .footer {
         flex-direction: column;
         height: auto
     }
-}
+} 
