--- a/landit-next/components/layouts/presentation.module.css
+++ b/landit-next/components/layouts/presentation.module.css
@@ -1,4 +1,4 @@
-.main-presentation {
+.mainPresentation {
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -18,7 +18,7 @@
 }
 
 @media (max-width: 768px) {
-    .main-presentation {
+    .mainPresentation {
         flex-direction: column;
     }
 
@@ -27,7 +27,7 @@
         padding: 0 10px 0 10px;
     }
 
-    .image{
+    .image {
         width: 100%;
     }
-}
+} 
