--- a/components/layouts/header.module.css
+++ b/components/layouts/header.module.css
@@ -46,13 +46,33 @@
     cursor: pointer;
 }
 
+.headerZoomLogo{
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.headerLogo{
+    width: 30%;
+}
+
 @media only screen and (max-width: 768px) {
-    .headerImage {
-        font-size: 60px;
-        height: 300px;
+
+    .headerLogo {
+        width: 60%;
     }
-    
+
     .dropdownLanguages {
         top: 22px;
     }
-} 
+}
+
+
+@media only screen and (min-width: 2560px) {
+    .headerLogo {
+        width: 20%;
+    }
+}
+
