--- a/src/components/presentational/team.css
+++ b/src/components/presentational/team.css
@@ -48,6 +48,22 @@
     color: #374151;
 }
 
+.avatar-photo {
+    width: 160px;
+    height: 160px;
+    border-radius: 50%;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+}
+.avatar-photo img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 
 .avatar-name {
     margin-top: 0.5rem;
